CVS_SILENT Add French i18n in Parts

--- a/parts/adaproject/kdevadaproject.desktop
+++ b/parts/adaproject/kdevadaproject.desktop
@@ -6,7 +6,7 @@ Comment=Ada Project
 Comment[fr]=Un module externe pour la gestion de projet avec le langage ADA.
 Name=KDevAdaProject
 GenericName=Ada Project
-GenericName[fr]=Projet ADA
+GenericName[fr]=Projet avec ADA
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevadaproject
 X-KDevelop-Language=Ada
