--- a/parts/adasupport/kdevadasupport.desktop
+++ b/parts/adasupport/kdevadasupport.desktop
@@ -6,7 +6,7 @@ Comment=Ada Language Support
 Comment[fr]=Un module externe pour la gestion du langage ADA.
 Name=KDevAdaSupport
 GenericName=Ada Language Support
-GenericName[fr]=Gestion de ADA
+GenericName[fr]=Langage ADA
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevadasupport
 X-KDevelop-Language=Ada
