--- a/parts/bashsupport/kdevbashsupport.desktop
+++ b/parts/bashsupport/kdevbashsupport.desktop
@@ -6,7 +6,7 @@ Comment=Bash Support
 Comment[fr]=Un module externe pour la gestion de l'interpréteur BASH.
 Name=KDevBashSupport
 GenericName=Bash Support
-GenericName[fr]=Gestion de BASH
+GenericName[fr]=Interpréteur BASH
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevbashsupport
 X-KDevelop-Language=Bash
