--- a/parts/outputviews/kdevappoutputview.desktop
+++ b/parts/outputviews/kdevappoutputview.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Application Output View
+Comment[fr]=Un module externe pour la gestion de l'affichage des messages  texte d'une application.
 Name=KDevAppOutputView
+GenericName=Application Output View
+GenericName[fr]=Messages d'une application
 Icon=exec
 ServiceTypes=KDevelop/AppFrontend
 X-KDE-Library=libkdevoutputviews
