--- a/parts/outputviews/kdevmakeview.desktop
+++ b/parts/outputviews/kdevmakeview.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Compiler Frontend
+Comment[fr]=Un module externe pour la gestion de l'interface avec un compilateur.
 Name=KDevMakeView
+GenericName=Compiler Frontend
+GenericName[fr]=Interface pour compilateur
 Icon=konsole
 ServiceTypes=KDevelop/MakeFrontend
 X-KDE-Library=libkdevoutputviews
