--- a/parts/partexplorer/kdevpartexplorer.desktop
+++ b/parts/partexplorer/kdevpartexplorer.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=A Graphical tool for performing KTrader-like queries about registered services
+Comment[fr]=Un module externe pour la gestion d'une interface graphique pour l'exploration de composants logiciels (similaire au programme « KTrader »).
 Name=PartExplorer
 GenericName=Part Explorer tool
+GenericName[fr]=Exploration de modules externes
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevpartexplorer
 X-KDevelop-Scope=Global
