--- a/parts/pascalproject/kdevpascalproject.desktop
+++ b/parts/pascalproject/kdevpascalproject.desktop
@@ -3,6 +3,9 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Pascal Project
+Comment[fr]=Un module externe pour la gestion de projet avec le langage PASCAL.
 Name=KDevPascalProject
+GenericName=Pascal Project
+GenericName[fr]=Projet avec PASCAL
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevpascalproject
