--- a/parts/pascalsupport/kdevpascalsupport.desktop
+++ b/parts/pascalsupport/kdevpascalsupport.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Pascal Language Support
+Comment[fr]=Un module externe pour la gestion du langage PASCAL.
 Name=KDevPascalSupport
+GenericName=Pascal Language Support
+GenericName[fr]=Langage PASCAL
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevpascalsupport
 X-KDevelop-Language=Pascal
