--- a/parts/perforce/kdevperforce.desktop
+++ b/parts/perforce/kdevperforce.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Perforce Integration
+Comment[fr]=Un module externe qui gére le programme « PerForce » pour la gestion des versions de sources (similaire à CVS).
 Name=KDevPerforce
+GenericName=Perforce Integration
+GenericName[fr]=Intégration de « Perforce »
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevperforce
 X-KDevelop-Scope=Project
