--- a/parts/perlsupport/kdevperlsupport.desktop
+++ b/parts/perlsupport/kdevperlsupport.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Perl Support
+Comment[fr]=Un module externe pour la gestion du langage PERL.
 Name=KDevPerlSupport
+GenericName=Perl Support
+GenericName[fr]=Langage PERL
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevperlsupport
 X-KDevelop-Language=Perl
