--- a/parts/phpsupport/kdevphpsupport.desktop
+++ b/parts/phpsupport/kdevphpsupport.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=PHP Support
+Comment[fr]=Un module externe pour la gestion du langage PHP.
 Name=KDevPHPSupport
+GenericName=PHP Support
+GenericName[fr]=Langage PHP
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevphpsupport
 X-KDevelop-Language=PHP
