--- a/parts/pythonsupport/kdevpythonsupport.desktop
+++ b/parts/pythonsupport/kdevpythonsupport.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Python Support
+Comment[fr]=Un module externe pour la gestion du langage PYTHON.
 Name=KDevPythonSupport
+GenericName=Python Support
+GenericName[fr]=Langage PYTHON
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevpythonsupport
 X-KDevelop-Language=Python
