--- a/parts/regexptest/kdevregexptest.desktop
+++ b/parts/regexptest/kdevregexptest.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Regular Expression Tester
+Comment[fr]=Un module externe pour la gestion d'un débogeur d'expressions régulières.
 Name=KDevRegexpTest
+GenericName=Regular Expression Tester
+GenericName[fr]=Débogeur d'expressions régulières
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevregexptest
 X-KDevelop-Scope=Global
