--- a/parts/rubysupport/kdevrubysupport.desktop
+++ b/parts/rubysupport/kdevrubysupport.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Ruby Support
+Comment[fr]=Un module externe pour la gestion du langage RUBY.
 Name=KDevRubySupport
+GenericName=Ruby Support
+GenericName[fr]=Langage RUBY
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevrubysupport
 X-KDevelop-Language=Ruby
