--- a/parts/scripting/kdevscripting.desktop
+++ b/parts/scripting/kdevscripting.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Python Scripting Interface
+Comment[fr]=Un module externe pour la gestion de scripts avec le langage PYTHON.
 Name=KDevScripting
+GenericName=Python Scripting Interface
+GenericName[fr]=Interface PYTHON
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevscripting
 X-KDevelop-Scope=Global
