--- a/parts/scriptproject/kdevscriptproject.desktop
+++ b/parts/scriptproject/kdevscriptproject.desktop
@@ -3,6 +3,9 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Scripting Language Project
+Comment[fr]=Un module externe pour la gestion de projets avec les langages de scripts.
 Name=KDevScriptProject
+GenericName=Scripting Language Project
+GenericName[fr]=Projet avec langages scripts
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevscriptproject
