--- a/parts/sourcenav/kdevpart_sourcenav.desktop
+++ b/parts/sourcenav/kdevpart_sourcenav.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Source Code Navigation
+Comment[fr]=Un module externe pour la gestion d'un navigateur de codes sources.
 Name=KDevSourceNav
+GenericName=Source Code Navigation
+GenericName[fr]=Navigation dans code source
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevsourcenav
