--- a/parts/javasupport/kdevjavasupport.desktop
+++ b/parts/javasupport/kdevjavasupport.desktop
@@ -6,7 +6,7 @@ Comment=Java Support
 Comment[fr]=Un module externe pour la gestion du langage JAVA.
 Name=KDevJavaSupport
 GenericName=Java Support
-GenericName[fr]=Gestion de JAVA
+GenericName[fr]=Langage JAVA
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevjavasupport
 X-KDevelop-Language=Java
