--- a/parts/openwith/kdevopenwith.desktop
+++ b/parts/openwith/kdevopenwith.desktop
@@ -6,7 +6,7 @@ Comment=This plugin provides additional "open" alternatives for various context 
 Comment[fr]=Un module externe pour la gestion de l'ouverture de fichier alternative via les menus contextuels (option « Ouvrir avec... »).
 Name=KDevOpenWith
 GenericName="Open with" menu addon
-GenericName[fr]=Gestion de « Ouvrir avec... »
+GenericName[fr]=Option « Ouvrir avec... »
 icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevopenwith
