--- a/parts/replace/kdevpart_replace.desktop
+++ b/parts/replace/kdevpart_replace.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=
 Comment=This plugin is an interactive projectwide "Search and Replace" tool. Search using string or regexp matching, and select the replacements to be made from a preview before the action is finalized. When loaded it appears in the Edit menu.
+Comment[fr]=Un module externe pour la gestion d'un outil permettant la recherche et le remplacement de chaînes de caractères. L'utilisation d'expressions régulière est possible. La sélection des remplacements à effectuer peut être faite à partir d'une prévisualisation des actions réaliser. Ce module externe apparaît dans le menu « Édition ».
 Name=ReplacePart
+GenericName=Replace Part
+GenericName[fr]=Outil de remplacement
 GenericName=Search-Select-Replace tool
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
