CVS_SILENT Add French i18n in Parts

--- a/parts/cvs/kdevcvs.desktop
+++ b/parts/cvs/kdevcvs.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=CVS Integration
-Comment[fr]=Un module externe pour l'intégration de « CVS ».
+Comment[fr]=Un module externe qui gére le programme « CVS » pour la gestion des versions de codes sources.
 Name=CVS
 GenericName=CVS Integration
 GenericName[fr]=Intégration de CVS
