--- a/parts/sqlsupport/kdevsqlsupport.desktop
+++ b/parts/sqlsupport/kdevsqlsupport.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=SQL Support
+Comment[fr]=Un module externe pour la gestion du langage SQL.
 Name=KDevSQLSupport
+GenericName=SQL Support
+GenericName[fr]=Langage SQL
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevsqlsupport
 X-KDevelop-Language=SQL
