--- a/parts/texttools/kdevtexttools.desktop
+++ b/parts/texttools/kdevtexttools.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Text Tools
+Comment[fr]=Un module externe pour la gestion d'outils pour le texte.
 Name=KDevTextTools
+GenericName=Text Tools
+GenericName[fr]=Outils pour le texte
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevtexttools
 X-KDevelop-Scope=Global
