--- a/parts/tipofday/kdevpart_tipofday.desktop
+++ b/parts/tipofday/kdevpart_tipofday.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Tip of the Day
+Comment[fr]=Un module externe pour la gestion des astuces du jour.
 Name=KDevTipOfDay
+GenericName=Tip of the Day
+GenericName[fr]=Astuces du jour
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevtipofday
