--- a/parts/tools/kdevpart_tools.desktop
+++ b/parts/tools/kdevpart_tools.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=This plugin provides an easy way to add external applications to the Tools menu and toolbar.
+Comment[fr]=Un module externe pour l'ajout d'applications externes au menu « Outils » et à la barre d'outils.
 Name=KDevTools
 GenericName=Tools menu addition
+GenericName[fr]=Ajout d'outils externes
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevtools
