--- a/parts/uimode/kdevpart_uichooser.desktop
+++ b/parts/uimode/kdevpart_uichooser.desktop
@@ -3,8 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Provides a dialog for UI-mode selection.
+Comment[fr]=Un module externe pour le choix de l'interface utilisateur de KDevelop.
 Name=KDevUIChooser
 GenericName=User-Interface Selection
+GenericName[fr]=Choix de l'interface utilisateur
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevuichooser
