--- a/parts/svn/kdevpart_svn.desktop
+++ b/parts/svn/kdevpart_svn.desktop
@@ -3,7 +3,10 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Subversion Integration
+Comment[fr]=Un module externe qui gére le programme « SubVersion » pour la gestion des versions de codes sources (similaire à CVS).
 Name=KDevsvn
+GenericName=Subversion Integration
+GenericName[fr]=Intégration de « SubVersion »
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevsvn
