- Start wxwindows appwizard fixes

--- a/parts/appwizard/common/Makefile.am
+++ b/parts/appwizard/common/Makefile.am
@@ -11,6 +11,10 @@ gnu.tar.gz:
 		ChangeLog  INSTALL  NEWS  README  TODO
 	gzip gnu.tar
 
+wxwindows.tar.gz:
+	$(TAR) -cf wxwindows.tar -C $(srcdir)/wx macros
+	gzip wxwindows.tar
+
 incadmin.tar.gz:
 	$(TAR) -cf incadmin.tar -C $(srcdir)/incadmin acconfig.h  \
 		config.guess  config.sub  depcomp install-sh  \
@@ -19,4 +23,12 @@ incadmin.tar.gz:
 
 appwizarddatadir = ${kde_datadir}/kdevappwizard
 commondatadir = ${appwizarddatadir}/template-common
-commondata_DATA = gideon.pm admin.tar.gz gnu.tar.gz incadmin.tar.gz gnome.tar.gz 		  kde-app.lsm kde-Makefile.am kde-Makefile.cvs kde-configure.in.in 		  kde-index.docbook kde-po-Makefile.am kde-doc-Makefile.am kde-doc-en-Makefile.am 		  hi16-app-app.png hi32-app-app.png kde-app.desktop kde-part.desktop 		  gnome-app.lsm gnome-Makefile.am gnome-Makefile.cvs 		  gnome-pixmaps-Makefile.am gnome-app.png 		  wx-configure.in.in wx-Makefile.am 		  COPYING COPYING.LIB LICENSE.QPL LICENSE.BSD Artistic
+commondata_DATA = gideon.pm admin.tar.gz gnu.tar.gz incadmin.tar.gz gnome.tar.gz wxwindows.tar.gz \
+						kde-app.lsm kde-Makefile.am kde-Makefile.cvs kde-configure.in.in \
+						kde-index.docbook kde-po-Makefile.am kde-doc-Makefile.am kde-doc-en-Makefile.am \
+						hi16-app-app.png hi32-app-app.png kde-app.desktop kde-part.desktop \
+						gnome-app.lsm gnome-Makefile.am gnome-Makefile.cvs \
+						gnome-pixmaps-Makefile.am gnome-app.png \
+						wx-configure.in wx-Makefile.am wx-Makefile.cvs \
+						COPYING COPYING.LIB LICENSE.QPL LICENSE.BSD Artistic
+
