--- a/parts/appwizard/common/wx-configure.in
+++ b/parts/appwizard/common/wx-configure.in
@@ -1,9 +1,13 @@
+AC_INIT(src/$APPNAMELC$.cpp)
 AM_INIT_AUTOMAKE($APPNAMELC$, $VERSION$)
-AC_C_BIGENDIAN
+
 AC_PROG_CXX
 AC_PROG_INSTALL
 AC_LIBTOOL_DLOPEN
 AC_PROG_LIBTOOL
+
+CPPFLAGS="$CPPFLAGS -Wall -g -fexceptions"
+CXXFLAGS="$CPPFLAGS -Wall -g -fexceptions"
 
 WXCONFIG=wx-config
 AC_ARG_WITH(wx-config,
@@ -34,7 +38,13 @@ case $wxversion in
       ;;
 esac
 
-WX_CFLAGS="`$WXCONFIG --cppflags`"
+WX_CPPFLAGS="`$WXCONFIG --cppflags`"
 WX_CXXFLAGS="`$WXCONFIG --cxxflags | sed -e 's/-fno-exceptions//'`"
 WX_LIBS="`$WXCONFIG --libs`"
 
+CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
+CXXFLAGS="$CXXFLAGS $WX_CPPFLAGS"
+
+AC_SUBST(WX_LIBS)
+
+AC_OUTPUT(Makefile src/Makefile)
