--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -5,25 +5,6 @@
 #kdevelop: SCRIPTING_SUBDIR = scripting
 #kdevelop: QEDITOR_SUBDIR = qeditor
 #kdevelop: SVN_SUBDIR = svn
-#kdevelop: ADA_SUBDIR = adaproject adasupport
-#kdevelop: PYTHON_SUBDIR = pythonsupport
-#kdevelop: CPP_SUBDIR = cppsupport debugger
-#kdevelop: PERL_SUBDIR = perlsupport
-#kdevelop: PHP_SUBDIR = phpsupport
-#kdevelop: FORTRAN_SUBDIR = fortransupport
-#kdevelop: SQL_SUBDIR = sqlsupport
-#kdevelop: JAVA_SUBDIR = javasupport javadebugger antproject
-#kdevelop: RUBY_SUBDIR = rubysupport
-#kdevelop: BASH_SUBDIR = bashsupport
-#kdevelop: PASCAL_SUBDIR = pascalsupport pascalproject
-#kdevelop: AUTOPROJECT_SUBDIR = autoproject
-#kdevelop: SCRIPTPROJECT_SUBDIR = scriptproject
-#kdevelop: TROLLPROJECT_SUBDIR = trollproject
-#kdevelop: CUSTOMPROJECT_SUBDIR = customproject
-#kdevelop: CVS_SUBDIR = cvs
-#kdevelop: PERFORCE_SUBDIR = perforce
-#kdevelop: CLEARCASE_SUBDIR = clearcase
-#kdevelop: VBA_SUBDIR = visualboyadvance
 
 if include_scripting
 SCRIPTING_SUBDIR = scripting
@@ -37,80 +18,5 @@ if include_svn
 SVN_SUBDIR = svn
 endif
 
-if include_ada
-ADA_SUBDIR = adaproject adasupport
-endif
+SUBDIRS = doctreeview classview appwizard outputviews grepview fileview 	  adaproject adasupport 	  cppsupport pythonsupport perlsupport phpsupport fortransupport 	  autoproject scriptproject trollproject customproject 	  cvs perforce clearcase antproject diff valgrind sqlsupport 	  debugger distpart konsole astyle tools ctags regexptest doxygen 	  manager fileselector visualboyadvance tipofday abbrev filter 	  uimode editor-chooser openwith history filecreate           texttools javasupport javadebugger replace rubysupport closer bashsupport pascalsupport pascalproject           partexplorer bookmarks fullscreen           $(QEDITOR_SUBDIR) $(SVN_SUBDIR) $(SCRIPTING_SUBDIR)
 
-if include_python
-PYTHON_SUBDIR = pythonsupport 
-endif
-
-if include_cpp
-CPP_SUBDIR = cppsupport debugger
-endif
-
-if include_perl
-PERL_SUBDIR = perlsupport 
-endif
-
-if include_php
-PHP_SUBDIR = phpsupport
-endif
-
-if include_fortran
-FORTRAN_SUBDIR = fortransupport
-endif
-
-if include_sql
-SQL_SUBDIR = sqlsupport
-endif
-
-if include_java
-JAVA_SUBDIR = javasupport javadebugger antproject
-endif
-
-if include_ruby
-RUBY_SUBDIR = rubysupport
-endif
-
-if include_bash
-BASH_SUBDIR = bashsupport 
-endif
-
-if include_pascal
-PASCAL_SUBDIR = pascalsupport pascalproject
-endif
-
-if include_autoproject
-AUTOPROJECT_SUBDIR = autoproject
-endif
-
-if include_scriptproject
-SCRIPTPROJECT_SUBDIR = scriptproject
-endif
-
-if include_trollproject
-TROLLPROJECT_SUBDIR = trollproject
-endif
-
-if include_customproject
-CUSTOMPROJECT_SUBDIR = customproject
-endif
-
-if include_cvs
-CVS_SUBDIR = cvs
-endif
-
-if include_perforce
-PERFORCE_SUBDIR = perforce
-endif
-
-if include_clearcase
-CLEARCASE_SUBDIR = clearcase
-endif
-
-if include_vba
-VBA_SUBDIR = visualboyadvance 
-endif
-
-SUBDIRS = doctreeview classview appwizard outputviews grepview fileview diff valgrind distpart konsole astyle tools ctags regexptest doxygen manager fileselector tipofday abbrev filter uimode editor-chooser openwith history filecreate texttools replace closer partexplorer bookmarks fullscreen $(SCRIPTING_SUBDIR) $(QEDITOR_SUBDIR) $(SVN_SUBDIR) $(ADA_SUBDIR) $(PYTHON_SUBDIR) $(CPP_SUBDIR) $(PERL_SUBDIR) $(PHP_SUBDIR) $(FORTRAN_SUBDIR) $(SQL_SUBDIR) $(JAVA_SUBDIR) $(RUBY_SUBDIR) $(BASH_SUBDIR) $(PASCAL_SUBDIR) $(AUTOPROJECT_SUBDIR) $(SCRIPTPROJECT_SUBDIR) $(TROLLPROJECT_SUBDIR) $(CUSTOMPROJECT_SUBDIR) $(CVS_SUBDIR) $(PERFORCE_SUBDIR) $(CLEARCASE_SUBDIR) $(VBA_SUBDIR)
