--- a/lib/qextmdi/src/Makefile.am
+++ b/lib/qextmdi/src/Makefile.am
@@ -6,7 +6,9 @@ lib_LTLIBRARIES = libkdevelopqextmdi.la
 libkdevelopqextmdi_la_LDFLAGS = $(all_libraries) -version-info 3:0
 libkdevelopqextmdi_la_LIBADD = $(LIB_KPARTS)
 
-libkdevelopqextmdi_la_SOURCES = kmdichildarea.cpp kmdichildfrm.cpp kmdichildfrmcaption.cpp kmdichildview.cpp kmdimainfrm.cpp kmditaskbar.cpp
+libkdevelopqextmdi_la_SOURCES = kmdichildarea.cpp kmdichildfrm.cpp kmdichildfrmcaption.cpp \
+				kmdichildview.cpp kmdimainfrm.cpp kmditaskbar.cpp kmdidockcontainer.cpp \
+				kdockwidget_compat.cpp kmultitabbar.cpp
 
 KDE_OPTIONS = nofinal
 METASOURCES = AUTO
