Architectural changes for providing better (I hope) support to maintenance. It is possible to tag/untag files. If you have possibility, time and luck, please test login features and access to :ext: repositories

--- a/parts/cvsservice/Makefile.am
+++ b/parts/cvsservice/Makefile.am
@@ -6,7 +6,7 @@ kde_module_LTLIBRARIES = libkdevcvsservice.la
 libkdevcvsservice_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevcvsservice_la_LIBADD = $(top_builddir)/lib/libkdevelop.la     $(top_builddir)/lib/interfaces/libkdevinterfaces.la     -lcvsservice
 
-libkdevcvsservice_la_SOURCES = cvsformbase.ui cvsform.cpp cvspart.cpp logformbase.ui logform.cpp logform.skel commitdlg.cpp cvsoptionswidgetbase.ui cvsoptionswidget.cpp cvsprocesswidget.cpp cvsprocesswidget.skel cvsentry.cpp changelog.cpp cvsoptions.cpp cvsutils.cpp serverconfigurationwidgetbase.ui serverconfigurationwidget.cpp checkoutdialogbase.ui checkoutdialog.cpp checkoutdialog.skel
+libkdevcvsservice_la_SOURCES = cvsformbase.ui cvsform.cpp cvspart.cpp logformbase.ui logform.cpp logform.skel commitdlg.cpp cvsoptionswidgetbase.ui cvsoptionswidget.cpp cvsprocesswidget.cpp cvsprocesswidget.skel cvsentry.cpp changelog.cpp cvsoptions.cpp serverconfigurationwidgetbase.ui serverconfigurationwidget.cpp checkoutdialogbase.ui checkoutdialog.cpp checkoutdialog.skel tagdialog.cpp tagdialog.h tagdialogbase.ui cvspartimpl.h cvspartimpl.cpp cvsserviceimpl.h cvsserviceimpl.cpp
 
 METASOURCES = AUTO
 
