Make kdevprj2kdevelop executable. CCMAIL: 60966-done@bugs.kde.org

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,7 +8,7 @@ appsdir = $(kde_appsdir)/Development
 mime_DATA = x-kdevelop.desktop
 mimedir = $(kde_mimedir)/application
 
-utils_DATA = kdevprj2kdevelop
+utils_SCRIPTS = kdevprj2kdevelop
 utilsdir = $(kde_bindir)
 
 install-data-local:
