--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Package: gideon
 Architecture: any
 Depends: ${shlibs:Depends}, autoconf, automake | automake1.6 | automake1.7, kdebase-bin, gideon-data, gideon-plugins
 Recommends: make, gideon-doc
-Suggests: libqt3-mt-dev, qt3-doc, kdbg, kdelibs-dev, kdebase, kdelibs4-doc, htdig, sgmltools, gettext, a2ps, enscript, gv, qt3-tools, glimpse, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz, stl-manual
+Suggests: libqt3-mt-dev, qt3-doc, kdbg, kdelibs-dev, kdebase, kdelibs4-doc, htdig, sgmltools, gettext, a2ps, enscript, gv, qt3-tools, glimpse, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz, stl-manual, wxwin2.4-headers, wxwin2.4-i18n, wxwin2.4-examples, libwxbase2.4 | libwxgtk2.4 | libwxgtk2.4-contrib
 Description: An IDE for Unix/X11 - development version
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
@@ -18,6 +18,8 @@ Description: An IDE for Unix/X11 - development version
  .
  The application wizard can generate fully functional projects
  for terminal programs and GUI programs using Qt, KDE or GNOME.
+ .
+ URL: http://www.kdevelop.org/
 
 Package: gideon-doc
 Section: doc
@@ -33,6 +35,8 @@ Description: An IDE for Unix/X11 - documentation
  for terminal programs and GUI programs using Qt, KDE or GNOME.
  .
  This package contains documentation for KDevelop.
+ .
+ URL: http://www.kdevelop.org/
 
 Package: gideon-data
 Architecture: all
@@ -47,6 +51,8 @@ Description: An IDE for Unix/X11 - data
  for terminal programs and GUI programs using Qt, KDE or GNOME.
  .
  This package contains arch independent datas for KDevelop.
+ .
+ URL: http://www.kdevelop.org/
 
 Package: gideon-dev
 Architecture: all
@@ -63,10 +69,12 @@ Description: An IDE for Unix/X11 - development files
  for terminal programs and GUI programs using Qt, KDE or GNOME.
  .
  This package contains development files for KDevelop.
+ .
+ URL: http://www.kdevelop.org/
 
 Package: gideon-plugins
 Architecture: any
-Depends: ${shlibs:Depends}, gideon (= ${Source-Version})
+Depends: ${shlibs:Depends}
 Description: An IDE for Unix/X11 - development files
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
@@ -77,3 +85,6 @@ Description: An IDE for Unix/X11 - development files
  for terminal programs and GUI programs using Qt, KDE or GNOME.
  .
  This package contains the plugins for KDevelop.
+ .
+ URL: http://www.kdevelop.org/
+
