--- a/parts/adasupport/Makefile.am
+++ b/parts/adasupport/Makefile.am
@@ -2,7 +2,7 @@
 # Here resides the Ada support part.
 KDE_CXXFLAGS = $(USE_EXCEPTIONS)
 
-INCLUDES = -I$(top_srcdir)/lib/antlr 		-I$(top_srcdir)/lib/interfaces 		-I$(top_srcdir)/lib/sourceinfo 		$(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/antlr 		-I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util		-I$(top_srcdir)/lib/sourceinfo 		$(all_includes)
 
 kde_module_LTLIBRARIES = libkdevadasupport.la
 libkdevadasupport_la_LDFLAGS = $(LEXLIB) $(all_libraries) $(KDE_PLUGIN)
