--- a/lib/util/Makefile.am
+++ b/lib/util/Makefile.am
@@ -5,3 +5,6 @@ noinst_LTLIBRARIES = libkdevutil.la
 libkdevutil_la_SOURCES = processwidget.cpp processlinemaker.cpp domutil.cpp splitter.cpp execcommand.cpp ksavealldialog.cpp filetemplate.cpp urlutil.cpp locate.cpp
 
 METASOURCES = AUTO
+
+kdevelopincludedir = $(includedir)/kdevelop
+kdevelopinclude_HEADERS = domutil.h
