if you want use KDevProject you must include lib/util

--- a/parts/replace/Makefile.am
+++ b/parts/replace/Makefile.am
@@ -1,6 +1,6 @@
 # Here resides the replace part (search and replace in the entire project)
 
-INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevreplace.la
 libkdevreplace_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
