--- a/lib/project/Makefile.am
+++ b/lib/project/Makefile.am
@@ -6,6 +6,7 @@ INCLUDES = -I$(top_srcdir)/lib/util $(all_includes)
 
 noinst_LTLIBRARIES = libkdevproject.la
 
-libkdevproject_la_SOURCES = runoptionswidget.cpp runoptionswidgetbase.ui makeoptionswidget.cpp makeoptionswidgetbase.ui addenvvardlg.cpp subclassesdlgbase.ui subclassesdlg.cpp environmentvariableswidgetbase.ui environmentvariableswidget.cpp addfilesdialog.cpp
+libkdevproject_la_SOURCES = runoptionswidget.cpp runoptionswidgetbase.ui makeoptionswidget.cpp makeoptionswidgetbase.ui addenvvardlg.cpp subclassesdlgbase.ui subclassesdlg.cpp environmentvariableswidgetbase.ui environmentvariableswidget.cpp addfilesdialog.cpp envvartools.cpp
 
 METASOURCES = AUTO
+noinst_HEADERS = addenvvardlg.h addfilesdialog.h environmentvariableswidget.h environmentvariableswidgetbase.h makeoptionswidget.h makeoptionswidgetbase.h runoptionswidget.h runoptionswidgetbase.h subclassesdlg.h subclassesdlgbase.h envvartools.h
