Put fullscreen action into View menu CCMAIL: 61764-done@bugs.kde.org

--- a/parts/fullscreen/kdevpart_fullscreen.rc
+++ b/parts/fullscreen/kdevpart_fullscreen.rc
@@ -1,8 +1,9 @@
 <!DOCTYPE kpartgui>
 <kpartplugin name="fullscreen" library="libfullscreenplugin" version="1">
 <MenuBar>
- <Menu name="tools"><Text>&amp;Tools</Text>
-  <Action name="fullscreen"/>
+  <Menu name="view">
+    <Text>&amp;View</Text>
+    <Action name="fullscreen"/>
  </Menu>
 </MenuBar>
 <ToolBar name="mainToolBar">
