--- a/parts/closer/kdevpart_closer.rc
+++ b/parts/closer/kdevpart_closer.rc
@@ -1,8 +1,9 @@
 <!DOCTYPE kpartgui>
 <kpartplugin name="closer" library="libcloserplugin" version="1">
 <MenuBar>
- <Menu name="tools">
-  <Action name="closer"/>
+  <Menu name="window">
+    <Action name="closer"/>
+    <Separator/>
  </Menu>
 </MenuBar>
 </kpartplugin>
